arreglo de url de redireccion en SMTP y redireccion de registro